--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -13,7 +13,7 @@
 \usepackage{epstopdf}
 \usepackage{nomencl}
 \usepackage{tabularx}
-\usepackage{subfiles}
+% \usepackage{subfiles}
 \usepackage{color}
 \usepackage{arydshln,leftidx,mathtools}
 \makenomenclature
