--- a/doc/latex2/theory.tex
+++ b/doc/latex2/theory.tex
@@ -267,7 +267,7 @@ Where $\tilde{\Delta t}$ is the time step for the random walkers which is exactl
 Similarly $\tilde{\Delta x}$ is the spatial resolution on the micro scale which is also the step length, $l$, for the random walkers. 
 Rewriting equation \eqref{theory:einstein_relation} gives the final expression for the step length
 
-\begin{equation}\label{theory_step_length}
+\begin{equation}\label{theory:step_length}
  l = \sqrt{2dD\frac{\Delta t}{\tau}}
 \end{equation}
 
