alternative version of application:implementation

--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -93,6 +93,10 @@
 \clearpage
 \include{analysis}
 
+\chapter{Physical application}
+\clearpage
+\include{application}
+
 %-------Bibliography-------%
 \printbibliography
 \end{document}
